--- a/package.json
+++ b/package.json
@@ -19,17 +19,13 @@
   "homepage": "https://github.com/ManrajGrover/Tablo#readme",
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-util": "^3.0.8",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-babel": "^6.1.2"
   },
   "dependencies": {
     "jimp": "^0.2.27"
