--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "tablo",
+  "name": "img2tab",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "Convert images to table, for emails and more",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ManrajGrover/Tablo.git"
+    "url": "git+https://github.com/ManrajGrover/img2tab.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Manraj Singh <manrajsinghgrover@gmail.com> (http://manrajsingh.in)",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ManrajGrover/Tablo/issues"
+    "url": "https://github.com/ManrajGrover/img2tab/issues"
   },
-  "homepage": "https://github.com/ManrajGrover/Tablo#readme",
+  "homepage": "https://github.com/ManrajGrover/img2tab#readme",
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.12.2",
